                                                         -*- coding: utf-8 -*-

Changes with Apache Traffic Server 2.1.1

  *) Allow SI decimal multipliers for numeric configuration
    parameters [TS-361].

  *) Standardize configure options by allowing to specify the
    location for any third-party library, and split library
    detection code into separate .m4 files [TS-345].

  *) Reorganization of the path layout system.
    Add --enable-layout=LAYOUT configure option that can select layout
    from config.layout file [TS-280].

  *) HTTP state machine is now 64-bit "clean", allowing for caching and
   proxying documents larger than 2GB [TS-34].


Changes with Apache Traffic Server 2.1.0

  *) Support for many more platforms, including FreeBSD, MacOSX and Solaris.

  *) Code cleanup to get the ATS software into a distributable shape. This
   means that certain things are missing, or not functional (intentionally).

  *) Support for larger Cache Partitions up to .5 PB (Petabytes), reducing
   seeks/write.

  *) Reduced Cache miss latency (sub millesecond).

  *) RAM Cache pluggability, new algorithm (CLFUS) and optional compression.

  *) Support for TCL v8.6 and later [TS-246].

  *) The cache is now 64-bit "clean".


Changes with Apache Traffic Server 2.0.0

  *) Change SDK versioning schemes to 2.0 [TS-249).

  *) Minor additions to the SDK (see the docs for details).

  *) Support regexe_map rules in remap.config [TS-80]


Changes with Apache Traffic Server 2.0.0-alpha

  *) Code cleanup to get the ATS software into a distributable shape. This
   means that certain things are missing, or not functional (intentionally).

  *) Ports available for most Linux distros, including 64-bit.