@@ -15,6 +15,8 @@ Changes with Apache Traffic Server 2.1.1
 
   *) HTTP state machine is now 64-bit "clean", allowing for caching and
    proxying documents larger than 2GB [TS-34].
+  
+  *) Fix for truncated Content-Type on TS-generated responses [TS-290].
 
 
 Changes with Apache Traffic Server 2.1.0
